@@ -4,14 +4,14 @@ plugins {
   id 'application'
   id 'uk.gov.hmcts.java' version '0.12.43'
   id 'checkstyle'
-  id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.18'
+  id 'io.spring.dependency-management' version '1.1.5'
+  id 'org.springframework.boot' version '3.3.3'
   id 'org.owasp.dependencycheck' version '8.0.1'
   id 'org.sonarqube' version '5.0.0.4638'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'jacoco'
   id 'idea'
-  id 'au.com.dius.pact' version '4.6.20'
+  id 'au.com.dius.pact' version '4.6.5'
 }
 
 dependencyUpdates.resolutionStrategy = {
@@ -28,19 +28,19 @@ dependencyUpdates.resolutionStrategy = {
 }
 
 def springBootVersion = plugins.getPlugin('org.springframework.boot').class.package.implementationVersion
-def springCloudVersion = '2021.0.9'
+def springCloudVersion = '2023.0.4'
 
 def versions = [
-  logback           : '1.2.13',
   springBoot        : springBootVersion,
-  restAssuredVersion: '4.2.0',
+  restAssuredVersion: '5.4.0',
   jackson           : '2.17.0',
-  junit             : '5.10.1',
+  junit             : '5.10.2',
   junitPlatform     : '1.10.2',
   pact_version    : '4.1.7',
   serviceAuthVersion : '4.0.3',
   idamJavaClient : '2.0.1',
-  elasticSearch     : '7.17.20'
+  elasticSearch     : '7.17.20',
+  lombok            : '1.18.34'
 ]
 
 static def getCheckedOutGitCommitHash() {
@@ -59,7 +59,7 @@ allprojects {
 
   java {
     toolchain {
-      languageVersion = JavaLanguageVersion.of(17)
+      languageVersion = JavaLanguageVersion.of(21)
     }
   }
 
@@ -73,7 +73,7 @@ allprojects {
   }
 
   jacoco {
-    toolVersion = '0.8.8' // jacocoMavenPluginVersion
+    toolVersion = '0.8.11' // latest compatible with JDK 21
     reportsDirectory = file("$buildDir/reports/jacoco")
   }
 
@@ -99,36 +99,38 @@ allprojects {
     }
   }
 
-  sourceSets {
-    integrationTest {
-      java {
-        compileClasspath += main.output + test.output
-        runtimeClasspath += main.output + test.output
-        srcDir('src/integrationTest/java')
+  if (project == rootProject) {
+    sourceSets {
+      integrationTest {
+        java {
+          compileClasspath += main.output + test.output
+          runtimeClasspath += main.output + test.output
+          srcDir('src/integrationTest/java')
+        }
+        resources {
+          srcDir('src/integrationTest/resources')
+        }
       }
-      resources {
-        srcDir('src/integrationTest/resources')
-      }
-    }
 
-    aat {
-      java {
-        compileClasspath += main.output
-        runtimeClasspath += main.output
-        srcDir('src/aat/java')
+      aat {
+        java {
+          compileClasspath += main.output
+          runtimeClasspath += main.output
+          srcDir('src/aat/java')
+        }
+        resources {
+          srcDir('src/aat/resources')
+        }
       }
-      resources {
-        srcDir('src/aat/resources')
-      }
-    }
 
-    contractTest {
-      java {
-        compileClasspath += main.output
-        runtimeClasspath += main.output
-        srcDir file('src/contractTest/java')
+      contractTest {
+        java {
+          compileClasspath += main.output
+          runtimeClasspath += main.output
+          srcDir file('src/contractTest/java')
+        }
+        resources.srcDir file('src/contractTest/resources')
       }
-      resources.srcDir file('src/contractTest/resources')
     }
   }
 
@@ -156,13 +158,13 @@ allprojects {
     dependencies {
       // checkstyle needs a certain version and so does spring fox swagger, so can't use latest
       // fun times...
-      dependency group: 'com.google.guava', name: 'guava', version: '33.5.0-jre'
+      dependency group: 'com.google.guava', name: 'guava', version: '33.1.0-jre'
 
       dependency group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
       dependency group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
       dependency group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
 
-      dependency group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.83'
+      dependency group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.77'
 
       dependencySet(
         group: 'org.yaml',
@@ -171,30 +173,68 @@ allprojects {
         entry 'snakeyaml'
       }
 
-      dependencySet(group: 'ch.qos.logback', version: '1.2.13') {
-        entry 'logback-core'
-        entry 'logback-classic'
-      }
 
       dependencySet(
-        group: 'org.hibernate',
-        version: '8.0.1.Final'
+        group: 'org.hibernate.validator',
+        version: '8.0.3.Final'
       ) {
         entry 'hibernate-validator'
       }
+
+      dependencySet(
+        group: 'org.eclipse.angus',
+        version: '2.0.3'
+      ) {
+        entry 'jakarta.mail'
+        entry 'angus-core'
+        entry 'angus-mail'
+        entry 'imap'
+        entry 'logging-mailhandler'
+        entry 'pop3'
+        entry 'smtp'
+      }
+
+      dependency group: 'org.eclipse.angus', name: 'angus-activation', version: '2.0.3'
+
+      dependencySet(
+        group: 'org.apache.logging.log4j',
+        version: '2.25.3'
+      ) {
+        entry 'log4j-api'
+        entry 'log4j-core'
+      }
+
+      dependencySet(group: 'org.apache.tomcat.embed', version: '10.1.48') {
+        entry 'tomcat-embed-core'
+        entry 'tomcat-embed-websocket'
+        entry 'tomcat-embed-el'
+        entry 'tomcat-embed-jasper'
+      }
+
+      dependency group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
+
+      dependency group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
+      dependency group: 'org.apache.commons', name: 'commons-io', version: '2.14.0'
     }
   }
 }
 
 configurations {
   aatImplementation.extendsFrom(testImplementation)
-  aatRuntime.extendsFrom(testRuntime)
-  integrationTestImplementation.extendsFrom(testCompile)
-  integrationTestRuntime.extendsFrom(testRuntime)
+  aatRuntimeOnly.extendsFrom(testRuntimeOnly)
+  integrationTestImplementation.extendsFrom(testImplementation)
+  integrationTestRuntimeOnly.extendsFrom(testRuntimeOnly)
+  fortify
 }
 
 configurations.all {
   exclude group: 'com.vaadin.external.google', module: 'android-json'
+  resolutionStrategy {
+    force 'org.hibernate.validator:hibernate-validator:8.0.3.Final'
+    force 'org.apache.logging.log4j:log4j-api:2.25.3'
+    force 'org.apache.logging.log4j:log4j-core:2.25.3'
+    force 'org.eclipse.angus:angus-activation:2.0.3'
+  }
 }
 
 dependencies {
@@ -219,20 +259,17 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.3'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.25.3'
 
-  implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
+  implementation group: 'org.flywaydb', name: 'flyway-core'
 
-
-  implementation group: 'ch.qos.logback', name: 'logback-classic', version: versions.logback
-  implementation group: 'ch.qos.logback', name: 'logback-core', version: versions.logback
 
   implementation group: 'com.mitchellbosecke', name: 'pebble', version: '2.4.0'
 
-  implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.15'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
 
   implementation group: 'org.elasticsearch', name: 'elasticsearch', version: versions.elasticSearch
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.10'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
 
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.0.1-RELEASE'
 
@@ -256,7 +293,7 @@ dependencies {
   }
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.2'
   implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.4.1'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
@@ -278,16 +315,19 @@ dependencies {
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
 
   implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '13.9'
+  implementation group: 'io.github.openfeign', name: 'feign-hc5', version: '13.9'
 
   implementation group: 'org.springframework.cloud',name : 'spring-cloud-starter-bootstrap'
 
   implementation group: 'org.json', name: 'json', version: '20240303'
 
-  implementation group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
-  implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+  implementation group: 'jakarta.json', name: 'jakarta.json-api', version: '2.0.1'
+  implementation group: 'org.glassfish', name: 'jakarta.json', version: '2.0.1'
+  implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+  implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
 
-  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.42'
-  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.42'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
 
   testImplementation project(':domain-sample-data')
   testImplementation project(path: ":ccd-adapter", configuration: 'testArtifacts')
@@ -298,25 +338,25 @@ dependencies {
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
   testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
+  fortify group: 'com.github.hmcts', name: 'fortify-client', version: '1.2.2', classifier: 'all'
 
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
-  testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: versions.junit
+  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
+  testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: versions.junit
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
   testImplementation group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
-  testImplementation group: 'org.junit.platform', name: 'junit-platform-engine', version: versions.junitPlatform
+  testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: versions.junitPlatform
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.25.3'
   testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'
-  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.8.0'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.11.0'
   testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
-  testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.4'
+  testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.18.0'
 
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.29'
   testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.5.0'
   testImplementation group: 'net.jodah', name: 'failsafe', version: '2.4.0'
   testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.2'
   testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version: '2.8.2'
-  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
@@ -330,10 +370,9 @@ dependencies {
   contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
   contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
   contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
-  contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
-  contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
-  contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
-  contractTestRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
+  contractTestImplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
+  contractTestRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${versions.junit}"
+  contractTestRuntimeOnly "org.junit.platform:junit-platform-commons:${versions.junitPlatform}"
   contractTestImplementation group: 'com.github.hmcts', name: 'idam-java-client', version: versions.idamJavaClient
   contractTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.serviceAuthVersion
   contractTestImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -346,7 +385,7 @@ configurations.all {
 
 dependencies {
   testImplementation project(path: ':domain-model')
-  implementation 'org.projectlombok:lombok:1.18.42'
+  implementation 'org.projectlombok:lombok:1.18.34'
   integrationTestImplementation(sourceSets.test.output)
   integrationTestImplementation(sourceSets.main.output)
   integrationTestImplementation project(':email-client')
@@ -383,7 +422,7 @@ pact {
 
 tasks.register('fortifyScan', JavaExec) {
   mainClass.set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
-  classpath += sourceSets.test.runtimeClasspath
+  classpath = configurations.fortify + sourceSets.test.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
@@ -411,6 +450,8 @@ tasks.register('migrateClaims') {
 
 tasks.withType(Test).configureEach {
   useJUnitPlatform()
+  jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+          '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 }
 
 tasks.register('functional', Test) {
@@ -466,6 +507,10 @@ sonarqube {
   properties {
     property "sonar.projectName", "CMC :: Claim Store"
     property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    def rootTestDirs = sourceSets?.test?.allSource?.srcDirs?.findAll { it.exists() } ?: []
+    if (!rootTestDirs.isEmpty()) {
+      property "sonar.tests", rootTestDirs.collect { project.relativePath(it) }.join(",")
+    }
     property "sonar.exclusions", [
         "**/ccd/domain/**",
         "**/cmc/domain/models/**",
@@ -513,12 +558,23 @@ sonarqube {
         "**/ValidExpenseConstraintValidator.java",
         "**/ValidResidenceConstraintValidator.java",
         "**/PaperResponseFullDefenceCallbackHandler.java",
-        "**/PaymentsClientStub.java",
         "**/OCON9xResponseUtil.java",
         "**/ResponseUtils.java",
         "**/cmc/claimstore/services/ccd/callbacks/roboticssupport/RoboticsNotificationServiceImpl.java",
         "**/cmc/claimstore/services/UserService.java"
     ].join(",")
+  }
+}
+
+subprojects { subproject ->
+  sonarqube {
+    properties {
+      def sourceSetsExt = subproject.extensions.findByName('sourceSets')
+      def testDirs = sourceSetsExt?.findByName('test')?.allSource?.srcDirs?.findAll { it.exists() } ?: []
+      if (!testDirs.isEmpty()) {
+        property "sonar.tests", testDirs.collect { subproject.relativePath(it) }.join(",")
+      }
+    }
   }
 }
 
